test/libsolidity/syntaxTests/inheritance/override/public_vars_wrong_override.sol
contract X {
	uint public override foo;
}
// ----
// TypeError 7792: (26-34): Public state variable has override specified but does not override anything.
